# silly_browser

./: Cargo.toml  example.html
src/: main.rs  parser.rs  support.rs
